--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,4 +27,140 @@
         <url-pattern>/add_author/clienService</url-pattern>
     </servlet-mapping>
 
+
+
+
+    <!-- Jasper Reports Servlets -->
+
+    <servlet>
+        <servlet-name>CompileServlet</servlet-name>
+        <servlet-class>ru.korgov.webeltech.reports.servlets.CompileServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FillServlet</servlet-name>
+        <servlet-class>ru.korgov.webeltech.reports.servlets.FillServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PdfServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.PdfServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>HtmlServlet</servlet-name>
+        <servlet-class>ru.korgov.webeltech.reports.servlets.HtmlServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>XhtmlServlet</servlet-name>
+        <servlet-class>ru.korgov.webeltech.reports.servlets.XhtmlServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ImageServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.ImageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>XlsServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.XlsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>JExcelApiServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.JExcelApiServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RtfServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.RtfServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OdtServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.OdtServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OdsServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.OdsServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>JasperPrintServlet</servlet-name>
+        <servlet-class>ru.korgov.webeltech.reports.servlets.JasperPrintServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Xml4SwfServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.Xml4SwfServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DocxServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.DocxServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PptxServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.PptxServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>XlsxServlet</servlet-name>
+        <servlet-class>net.sf.jasperreports.j2ee.servlets.XlsxServlet</servlet-class>
+    </servlet>
+
+
+    <servlet-mapping>
+        <servlet-name>CompileServlet</servlet-name>
+        <url-pattern>/jreports/servlets/compile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FillServlet</servlet-name>
+        <url-pattern>/jreports/servlets/fill</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PdfServlet</servlet-name>
+        <url-pattern>/jreports/servlets/pdf</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HtmlServlet</servlet-name>
+        <url-pattern>/jreports/servlets/html</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>XhtmlServlet</servlet-name>
+        <url-pattern>/jreports/servlets/xhtml</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ImageServlet</servlet-name>
+        <url-pattern>/jreports/servlets/image</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>XlsServlet</servlet-name>
+        <url-pattern>/jreports/servlets/xls</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JExcelApiServlet</servlet-name>
+        <url-pattern>/jreports/servlets/jxl</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RtfServlet</servlet-name>
+        <url-pattern>/jreports/servlets/rtf</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OdtServlet</servlet-name>
+        <url-pattern>/jreports/servlets/odt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OdsServlet</servlet-name>
+        <url-pattern>/jreports/servlets/ods</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JasperPrintServlet</servlet-name>
+        <url-pattern>/jreports/servlets/jasperprint</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Xml4SwfServlet</servlet-name>
+        <url-pattern>/jreports/servlets/xml4swf</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DocxServlet</servlet-name>
+        <url-pattern>/jreports/servlets/docx</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PptxServlet</servlet-name>
+        <url-pattern>/jreports/servlets/pptx</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>XlsxServlet</servlet-name>
+        <url-pattern>/jreports/servlets/xlsx</url-pattern>
+    </servlet-mapping>
+
 </web-app>
